--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,10 +1,17 @@
 {
   "routes": [
-  {
-    "route": "/*",
-    "allowedRoles": ["authenticated"]
-  }],
-      
+    {
+      "route": "/*",
+      "allowedRoles": ["authenticated"]
+    }
+  ],
+  "responseOverrides": {
+    "401": {
+      "statusCode": 302,
+      "redirect": "/.auth/login/aad"
+    }
+  },
+  
   "auth": {
     "identityProviders": {
       "azureActiveDirectory": {
